# OBDII

./: .gitignore  CMakeLists.txt  README.md  jduwzdwr.eje.txt  specifications.docx
GUI/: PortReaderWriter.cpp  Test.qml  TestForm.ui.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  untitled1.pro
GUI/notneeded/: CarCoreApp.h  graph.files
GUI2/: mainwindow.ui  ui_mainwindow.h
data/: pcodes.json  ucodes.json
server/: Makefile  MyServer.cpp  MyServer.h  main.cpp
src/: CarCoreApp.cpp  CarCoreApp.h  DataOut.cpp  DataOut.h  ParseJson.cpp  ParseJson.h  PortReaderWriter.cpp  PortReaderWriter.cpp.autosave  PortReaderWriter.h  jsonparse.cpp  jsonparse.h  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  obd2client.cpp  obd2client.h  qcpdocumentobject.h  serialcomms.cpp  serialcomms.h  serialselector.cpp  serialselector.h  serialselector.ui  ui_mainwindow.h
src/OBDII_GUI/: OBDII_GUI.qmlproject
src/connect/: main.cpp
src/data/: bcodes.json  ccodes.json  example.json  pcodes.json  sample.json  sample.txt
src/jsoncpp/: jsoncpp.cpp
src/jsoncpp/json/: json.h
t1/obdrw/: Makefile  Obdrw.cpp  Obdrw.h  main.cpp  obdrw
t1/test/: Makefile  main.cpp
testusb/: connectobd.cpp  connectobd.h  main.cpp  testusb.pro
